# swarmkit

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  pyproject.toml
crates/swarmkit-core/: Cargo.toml
crates/swarmkit-core/src/: lib.rs  sandbox.rs  taskqueue.rs  vectors.rs  worker_pool.rs
crates/swarmkit-py/: Cargo.toml
crates/swarmkit-py/src/: lib.rs
docs/: PLAN.md
scripts/: demo_memory.py  demo_single_agent.py  sync_docs.py
src/swarmkit/agents/: __init__.py  base.py  catalog.py  loader.py
src/swarmkit/agents/definitions/: architect.yaml  coder.yaml  docs.yaml  reviewer.yaml  tester.yaml
src/swarmkit/cli/: daemon_client.py  main.py
src/swarmkit/core/: tokens.py
src/swarmkit/core/providers/: __init__.py  anthropic_provider.py  (+1 more)
src/swarmkit/daemon/: agent_tasks.py  server.py  supervisor.py
src/swarmkit/docs/: generate.py
src/swarmkit/federation/: identity.py  transport.py
src/swarmkit/mcp_server/: client_tools.py  server.py
src/swarmkit/memory/: embeddings.py  rag.py  store.py  trajectories.py  vectors.py
src/swarmkit/security/: audit.py  secrets.py
src/swarmkit/swarm/: consensus.py  coordinator.py  topology.py
tests/fixtures/: echo_mcp_server.py
tests/integration/: test_agent_catalog_token_budget.py  test_agent_live.py  test_coordinator_live.py  test_daemon_lifecycle.py  test_federation_lifecycle.py  test_mcp_server_live.py
tests/unit/: test_agent_catalog.py  test_agent_context_hints.py  test_agent_extra_tools.py  test_audit.py  test_consensus.py  test_coordinator_dispatch.py  test_coordinator_trajectories.py  test_daemon_agent_tasks.py  test_docs_generate.py  test_docs_sync.py  test_federation.py  test_identity.py  test_mcp_client_tools.py  test_mcp_server.py  test_memory_store.py  test_memory_vectors.py  test_native_sandbox.py  test_rag.py  test_secrets.py  test_topology.py  test_trajectories.py  test_worker_pool.py
