[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "swarmkit"
version = "0.1.0"
description = "A real, non-theater multi-agent orchestration system for Claude Code/Codex."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.69",
    "click>=8.1",
    "pyyaml>=6.0",
    "mcp>=1.28",
    "cryptography>=42",
    "starlette>=0.37",
    "uvicorn>=0.30",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "psutil>=6.0",
]
embeddings = [
    "sentence-transformers>=3.0",
]

[project.scripts]
swarmkit = "swarmkit.cli.main:cli"

[tool.maturin]
manifest-path = "crates/swarmkit-py/Cargo.toml"
module-name = "swarmkit._native"
python-source = "src"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
