[package]
name = "swarmkit-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "process", "time", "sync", "macros", "fs", "io-util"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
instant-distance = "0.6"

[target.'cfg(unix)'.dependencies]
rlimit = "0.10"

[dev-dependencies]
tempfile = "3"
